style: apply Google Java Format to all source files