@@ -6,7 +6,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.List;
 import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicReference;
@@ -17,146 +16,147 @@ import org.slf4j.MDC;
 
 class PropagatingExecutorServiceTest {
 
-    @Nested
-    class WithoutPropagation {
+  @Nested
+  class WithoutPropagation {
 
-        @Test
-        void virtualThreadExecutorLosesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
+    @Test
+    void virtualThreadExecutorLosesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
 
-            try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-                final var future = executor.submit(() -> MDC.get("traceId"));
-                assertNull(future.get(), "plain virtual thread executor must lose MDC");
-            } finally {
-                MDC.clear();
-            }
-        }
-
-        @Test
-        void platformThreadPoolLosesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
-
-            try (var executor = Executors.newFixedThreadPool(1)) {
-                final var future = executor.submit(() -> MDC.get("traceId"));
-                assertNull(future.get(), "plain platform thread pool must lose MDC");
-            } finally {
-                MDC.clear();
-            }
-        }
+      try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        final var future = executor.submit(() -> MDC.get("traceId"));
+        assertNull(future.get(), "plain virtual thread executor must lose MDC");
+      } finally {
+        MDC.clear();
+      }
     }
 
-    @Nested
-    class WithPropagation {
+    @Test
+    void platformThreadPoolLosesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
 
-        @Test
-        void submitCallablePreservesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
-
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                final var future = executor.submit(() -> MDC.get("traceId"));
-                assertEquals("abc-123", future.get());
-            } finally {
-                MDC.clear();
-            }
-        }
-
-        @Test
-        void submitRunnablePreservesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
-            final var captured = new AtomicReference<String>();
-
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                final var future = executor.submit(() -> captured.set(MDC.get("traceId")));
-                future.get();
-                assertEquals("abc-123", captured.get());
-            } finally {
-                MDC.clear();
-            }
-        }
-
-        @Test
-        void executePreservesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
-            final var captured = new AtomicReference<String>();
-            final var latch = new java.util.concurrent.CountDownLatch(1);
-
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                executor.execute(() -> {
-                    captured.set(MDC.get("traceId"));
-                    latch.countDown();
-                });
-                latch.await();
-                assertEquals("abc-123", captured.get());
-            } finally {
-                MDC.clear();
-            }
-        }
-
-        @Test
-        void invokeAllPreservesMdc() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "abc-123");
-
-            List<Callable<String>> tasks = List.of(
-                    () -> MDC.get("traceId"),
-                    () -> MDC.get("traceId"),
-                    () -> MDC.get("traceId"));
-
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                final var futures = executor.invokeAll(tasks);
-                for (Future<String> f : futures) {
-                    assertEquals("abc-123", f.get());
-                }
-            } finally {
-                MDC.clear();
-            }
-        }
-
-        @Test
-        void tasksRunOnVirtualThreads() throws Exception {
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                final var future = executor.submit(() -> Thread.currentThread().isVirtual());
-                assertTrue(future.get(), "tasks must run on virtual threads");
-            }
-        }
-
-        @Test
-        void workerThreadContextRestoredAfterExecution() throws Exception {
-            MDC.clear();
-            MDC.put("traceId", "parent-value");
-            final var workerMdcAfter = new AtomicReference<String>();
-
-            try (var executor = PropagatingExecutorService.wrap(
-                    Executors.newVirtualThreadPerTaskExecutor(),
-                    new Slf4jMdcContextPropagator())) {
-                // Submit a task that checks MDC, then manually run another task on the
-                // same virtual thread to verify restoration. Since virtual threads are
-                // one-per-task, we verify restoration within the same task instead.
-                final var future = executor.submit(() -> {
-                    // Before the wrapped task body runs, the propagator has attached
-                    // "parent-value". After it completes, restore should clean up.
-                    // We verify by checking MDC inside the task sees the propagated value.
-                    return MDC.get("traceId");
-                });
-                assertEquals("parent-value", future.get());
-            } finally {
-                MDC.clear();
-            }
-        }
+      try (var executor = Executors.newFixedThreadPool(1)) {
+        final var future = executor.submit(() -> MDC.get("traceId"));
+        assertNull(future.get(), "plain platform thread pool must lose MDC");
+      } finally {
+        MDC.clear();
+      }
     }
+  }
+
+  @Nested
+  class WithPropagation {
+
+    @Test
+    void submitCallablePreservesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
+
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        final var future = executor.submit(() -> MDC.get("traceId"));
+        assertEquals("abc-123", future.get());
+      } finally {
+        MDC.clear();
+      }
+    }
+
+    @Test
+    void submitRunnablePreservesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
+      final var captured = new AtomicReference<String>();
+
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        final var future = executor.submit(() -> captured.set(MDC.get("traceId")));
+        future.get();
+        assertEquals("abc-123", captured.get());
+      } finally {
+        MDC.clear();
+      }
+    }
+
+    @Test
+    void executePreservesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
+      final var captured = new AtomicReference<String>();
+      final var latch = new java.util.concurrent.CountDownLatch(1);
+
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        executor.execute(
+            () -> {
+              captured.set(MDC.get("traceId"));
+              latch.countDown();
+            });
+        latch.await();
+        assertEquals("abc-123", captured.get());
+      } finally {
+        MDC.clear();
+      }
+    }
+
+    @Test
+    void invokeAllPreservesMdc() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "abc-123");
+
+      List<Callable<String>> tasks =
+          List.of(() -> MDC.get("traceId"), () -> MDC.get("traceId"), () -> MDC.get("traceId"));
+
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        final var futures = executor.invokeAll(tasks);
+        for (Future<String> f : futures) {
+          assertEquals("abc-123", f.get());
+        }
+      } finally {
+        MDC.clear();
+      }
+    }
+
+    @Test
+    void tasksRunOnVirtualThreads() throws Exception {
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        final var future = executor.submit(() -> Thread.currentThread().isVirtual());
+        assertTrue(future.get(), "tasks must run on virtual threads");
+      }
+    }
+
+    @Test
+    void workerThreadContextRestoredAfterExecution() throws Exception {
+      MDC.clear();
+      MDC.put("traceId", "parent-value");
+      final var workerMdcAfter = new AtomicReference<String>();
+
+      try (var executor =
+          PropagatingExecutorService.wrap(
+              Executors.newVirtualThreadPerTaskExecutor(), new Slf4jMdcContextPropagator())) {
+        // Submit a task that checks MDC, then manually run another task on the
+        // same virtual thread to verify restoration. Since virtual threads are
+        // one-per-task, we verify restoration within the same task instead.
+        final var future =
+            executor.submit(
+                () -> {
+                  // Before the wrapped task body runs, the propagator has attached
+                  // "parent-value". After it completes, restore should clean up.
+                  // We verify by checking MDC inside the task sees the propagated value.
+                  return MDC.get("traceId");
+                });
+        assertEquals("parent-value", future.get());
+      } finally {
+        MDC.clear();
+      }
+    }
+  }
 }
